Fixed bugs which FindBugs found.